SLING-8432 - Provide support for running the Pax tests on Java 9 and higher